# oxideterm

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LEGAL.md  NOTICE  README.fr.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  deny.toml  index.html  package.json  plugin-api.d.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  feature_request.yml
.github/release-notes/: beta-changelog.md  beta.md  gpui-preview-changelog.md  gpui-preview.md  stable-changelog.md  stable.md
.github/scripts/: compose_gpui_preview_notes.py  compose_release_notes.py
.github/workflows/: agent-binaries.yml  build.yml  ci.yml  maintenance-automation.yml  native-package.yml  platform-checks.yml  promote-native-stable.yml
agent/: Cargo.toml  THIRD_PARTY_NOTICES.md
agent/src/: fs_ops.rs  main.rs  protocol.rs  symbols.rs  watcher.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/gpui/: OXIDETERM_PATCHES.md
crates/gpui-ce/gpui_scheduler/: Cargo.toml
crates/oxideterm-acp-host-tools/: Cargo.toml
crates/oxideterm-acp-host-tools/src/: lib.rs  protocol.rs  runtime.rs  tests.rs  types.rs
crates/oxideterm-ai/: Cargo.toml
crates/oxideterm-backend-classification/: Cargo.toml
crates/oxideterm-cli/: Cargo.toml
crates/oxideterm-cloud-sync/: Cargo.toml
crates/oxideterm-cloud-sync/src/: backend.rs  lib.rs  operation.rs  plugin_settings.rs  progress.rs  secrets.rs  service.rs  state.rs  state_transitions.rs
crates/oxideterm-cloud-sync/src/backend/: s3.rs
crates/oxideterm-cloud-sync/src/operation/: apply.rs  merge.rs  preview.rs  selection.rs  tests.rs  upload_plan.rs
crates/oxideterm-connections/: Cargo.toml
crates/oxideterm-desktop-presence/: Cargo.toml
crates/oxideterm-editor-syntax/: Cargo.toml
crates/oxideterm-editor-syntax/src/: language.rs  lib.rs  queries.rs  tests.rs
crates/oxideterm-environment/: Cargo.toml
crates/oxideterm-forwarding/: Cargo.toml
crates/oxideterm-forwarding/src/: bridge.rs  dynamic.rs  error.rs  events.rs  lib.rs  local.rs  manager.rs  model.rs  profiler.rs  registry.rs  registry_saved.rs  remote.rs  saved.rs
crates/oxideterm-forwarding/tests/: ssh_forwarding_e2e.rs
crates/oxideterm-gpui-app/: Cargo.toml  build.rs
crates/oxideterm-gpui-ide/: Cargo.toml
crates/oxideterm-gpui-markdown/: Cargo.toml
crates/oxideterm-gpui-markdown/src/: highlight.rs  html.rs  layout.rs  lib.rs  model.rs  parser.rs  render.rs  style.rs
crates/oxideterm-gpui-platform/: Cargo.toml
crates/oxideterm-gpui-platform/src/: lib.rs  rendering.rs
crates/oxideterm-gpui-terminal/: Cargo.toml
crates/oxideterm-ide-fs/: Cargo.toml
crates/oxideterm-launcher/: Cargo.toml
crates/oxideterm-local-files/: Cargo.toml
crates/oxideterm-native/: Cargo.toml
crates/oxideterm-network-proxy/: Cargo.toml
crates/oxideterm-network-proxy/src/: credentials.rs  http.rs  lib.rs  policy.rs  runtime.rs  settings.rs  tests.rs
crates/oxideterm-plugin-host-api/: Cargo.toml
crates/oxideterm-plugin-registry/: Cargo.toml
crates/oxideterm-plugin-runtime-install/: Cargo.toml
crates/oxideterm-plugin-wasm-runtime/: Cargo.toml
crates/oxideterm-plugin-wasm-runtime/src/: index.rs  lib.rs  paths.rs  runtime.rs  tests.rs
crates/oxideterm-preview/: Cargo.toml
crates/oxideterm-rdp-helper/: Cargo.toml
crates/oxideterm-rdp-helper/src/: event_writer.rs  frame.rs  input.rs  main.rs
crates/oxideterm-session-adapter/: Cargo.toml
crates/oxideterm-session-adapter/src/: auth.rs  lib.rs  proxy.rs  runtime_settings.rs  ssh.rs  tests.rs
crates/oxideterm-sftp/: Cargo.toml
crates/oxideterm-ssh/: Cargo.toml
crates/oxideterm-terminal/: Cargo.toml
crates/oxideterm-terminal-unicode/: Cargo.toml
crates/oxideterm-update/: Cargo.toml
crates/oxideterm-wsl-graphics/: Cargo.toml
crates/russh/: Cargo.toml  Cargo.toml.orig  OXIDETERM_PATCHES.md
crates/russh-sftp/: Cargo.toml  Cargo.toml.orig  OXIDETERM_PATCHES.md
docs/: AI_INLINE_CHAT.md  AI_SIDEBAR_CHAT.md  AI_SIDEBAR_CHAT_PLAN.md  ARCHITECTURE.md  DEVELOPMENT.md  ENV_DETECTOR.md  GRAPHICS_FORWARDING.md  GRAPHICS_FORWARDING.zh-CN.md  I18N.md  IDEMODE_DESIGN.md  IDE_MODE.md  LOCAL_TERMINAL.md  MAINTENANCE_AUTOMATION.md  OMP_SUPPORT_PLAN.md  OXIDE_NEXT_ARCHITECTURE.md  PERSISTENCE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  POLISH_ROADMAP.md  PORT_FORWARDING.md  PROTOCOL.md  RECONNECT_ORCHESTRATOR_PLAN.md  REFACTOR_CONNECTION_ARCHITECTURE.md  RESOURCE_PROFILER.md  SERIALIZATION.md  SESSION_MANAGER.md  SFTP.md  SPLIT_PANE.md  SYSTEM_INVARIANTS.md  TECH_DEBT.md  TERMINAL_SEARCH.md  USER_GUIDE.md  WINDOWS_TERMINAL_IMPROVEMENT.md  WSL_GUI_APP_PLAN.md  knownissues.md  native-plugin-api-ledger.md  native-plugin-system-plan.md  plugin-api.d.ts
docs/changelog/: 2026-02.md  2026-07.md
docs/readme/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt-BR.md  README.vi.md  README.zh-Hans.md  README.zh-Hant.md
public/fonts/: README.md
scripts/: README.md  build-agent.sh  build-cli.sh  bump-version.cjs  bump_version.py  check-i18n.cjs  generate-third-party-notices.cjs  generate_macos_unsigned_install_notice.py  generate_third_party_notices.py  install-linux-deps.sh  package_native.py  project-stats.cjs  release-notes.cjs  test_package_native.py  test_verify_native_package.py  verify_native_package.py
scripts/automation/: maintenance_policy.cjs  shadow_triage.cjs
scripts/font-subset/: optimize-latin.sh  subset.sh
scripts/quality/: verify_gpui_vendor.py
scripts/release/: bump_version.py  generate_macos_unsigned_install_notice.py  generate_third_party_notices.py  package_native.py  verify_native_package.py
scripts/tests/: test_compose_release_notes.py  test_package_native.py  test_verify_native_package.py
src/: App.tsx  THIRD_PARTY_NOTICES.md  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  THIRD_PARTY_NOTICES.md  tauri.conf.json
src-tauri/agents/: oxideterm-agent-aarch64-linux-musl  oxideterm-agent-x86_64-linux-musl
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
(+1406 files in other folders)
