[package]
name = "oxideterm-editor-syntax"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
oxideterm-editor-core = { path = "../oxideterm-editor-core" }
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-cmake.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-diff.workspace = true
tree-sitter-containerfile.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-fish.workspace = true
tree-sitter-go.workspace = true
tree-sitter-html.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-commonlisp.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-make.workspace = true
tree-sitter-md.workspace = true
tree-sitter-objc.workspace = true
tree-sitter-php.workspace = true
tree-sitter-powershell.workspace = true
tree-sitter-python.workspace = true
tree-sitter-r.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-sequel.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-zsh.workspace = true
tree-sitter-zig.workspace = true
ts-parser-perl.workspace = true
