[package]
name = "oxideterm-forwarding"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
dashmap.workspace = true
oxideterm-ssh = { path = "../oxideterm-ssh" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
